--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.16",
     "axios": "^0.24.0",
+    "mobx": "^6.3.8",
+    "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
